log
ju., 12 de may. de 2022 11:12:11: 
 tests:  0|5
total_score: 0/70
aa1c939
ju., 12 de may. de 2022 11:20:21: 
 sudoku.c | 20 ++++++++++++++++++--
 1 file changed, 18 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
429848c
ju., 12 de may. de 2022 11:48:17: 
 sudoku.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
In file included from test.c:5:0:
sudoku.c: In function 'DFS':
sudoku.c:89:10: error: implicit declaration of function 'size' [-Werror=implicit-function-declaration]
   while (size(S) != 0){
          ^~~~
sudoku.c:90:17: error: void value not ignored as it ought to be
       Node* n = pop(S);
                 ^~~
sudoku.c:91:22: error: 'true' undeclared (first use in this function)
       if (n->sudo == true) continue;
                      ^~~~
sudoku.c:91:22: note: each undeclared identifier is reported only once for each function it appears in
test.c:245:5: error: 'main' is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
 }
 ^
test.c:262:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
At top level:
test.c:245:5: error: 'main' defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:7:8: error: '_strdup' defined but not used [-Werror=unused-function]
 char * _strdup(const char * str) {
        ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
36fc5f4
ju., 12 de may. de 2022 11:48:54: 
 sudoku.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:5:0:
sudoku.c: In function 'DFS':
sudoku.c:89:10: error: implicit declaration of function 'size' [-Werror=implicit-function-declaration]
   while (size(S) != 0){
          ^~~~
sudoku.c:90:17: error: void value not ignored as it ought to be
       Node* n = pop(S);
                 ^~~
sudoku.c:91:22: error: 'true' undeclared (first use in this function)
       if (n->sudo == true) continue;
                      ^~~~
sudoku.c:91:22: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:108:5: error: 'main' is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ){
     ^~~~
test.c: In function 'main':
test.c:245:5: error: 'main' is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
 }
 ^
test.c: In function 'DFS':
test.c:262:1: error: expected declaration or statement at end of input
test.c:262:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
At top level:
test.c:245:5: error: 'main' defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
In file included from test.c:5:0:
sudoku.c:108:5: error: 'main' defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ){
     ^~~~
test.c:7:8: error: '_strdup' defined but not used [-Werror=unused-function]
 char * _strdup(const char * str) {
        ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
5c02b7d
ju., 12 de may. de 2022 11:58:21: 
 sudoku.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
 tests:  2|4
total_score: 15/70
3ab46d4
ju., 12 de may. de 2022 12:08:32: 
 sudoku.c | 21 +++++++++------------
 1 file changed, 9 insertions(+), 12 deletions(-)
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:51:9: error: unused variable 'j' [-Werror=unused-variable]
     int j=3*(k%3) + (p%3) ;
         ^
sudoku.c:50:9: error: unused variable 'i' [-Werror=unused-variable]
     int i=3*(k/3) + (p/3) ;
         ^
sudoku.c:48:11: error: unused variable 'z' [-Werror=unused-variable]
   int x,y,z, k=9,p;
           ^
sudoku.c:48:9: error: unused variable 'y' [-Werror=unused-variable]
   int x,y,z, k=9,p;
         ^
sudoku.c:48:7: error: unused variable 'x' [-Werror=unused-variable]
   int x,y,z, k=9,p;
       ^
sudoku.c: In function 'DFS':
sudoku.c:95:10: error: implicit declaration of function 'size' [-Werror=implicit-function-declaration]
   while (size(S) != 0){
          ^~~~
sudoku.c:97:17: error: comparison between pointer and integer [-Werror]
     if (n->sudo == true) continue;
                 ^~
cc1.exe: all warnings being treated as errors
Compilation failed
2ee95d7
ju., 12 de may. de 2022 12:09:01: 
 sudoku.c | 7 +------
 1 file changed, 1 insertion(+), 6 deletions(-)
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:48:3: error: 'return' with no value, in function returning non-void [-Werror]
   return;
   ^~~~~~
sudoku.c:46:5: note: declared here
 int is_valid(Node* n){
     ^~~~~~~~
sudoku.c: In function 'DFS':
sudoku.c:90:10: error: implicit declaration of function 'size' [-Werror=implicit-function-declaration]
   while (size(S) != 0){
          ^~~~
sudoku.c:92:17: error: comparison between pointer and integer [-Werror]
     if (n->sudo == true) continue;
                 ^~
cc1.exe: all warnings being treated as errors
Compilation failed
84aecc8
